# Mimic42

./: .gitignore  AGENTS.md  BASE_SYSTEM_PROMPT.txt  README.md  index.html  pyproject.toml
frontend/: .eslintrc.json  .gitignore  next.config.js  package.json  tailwind.config.ts
frontend/src/: middleware.ts
frontend/src/__tests__/: sanitize.test.ts  validators.test.ts
frontend/src/app/: globals.css  layout.tsx  providers.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/components/agents/: AgentStatusBadge.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/hooks/: useAgent.ts  useAgentMessages.ts  useAgents.ts  useMemory.ts  useOnboarding.ts  useRealtimeFeed.ts  useTelegramSession.ts
frontend/src/lib/: api.ts  constants.ts  queryClient.ts  sanitize.ts  validators.ts
frontend/src/types/: index.ts  supabase.ts
scratch/: check_db.py  check_users.py  fix_missing_profile.py  inspect_db.py  inspect_schema.py  run_upsert.py  simulate_user_upsert.py  telegram_tools_plan.md  test_agent_tools.py  test_live.py  test_postgrest_error.py
src/mimic42/: __init__.py  config.py  main.py
src/mimic42/api/: app.py  auth.py
src/mimic42/core/: __init__.py  agent_runtime.py  agent_store.py  crypto.py  manager.py  memory.py  onboarding.py
src/mimic42/integrations/: __init__.py  agent_response_schema.py  database_agent_store.py  database_memory.py  database_models.py  database_onboarding.py  database_session.py  langchain_agent.py  mem0_memory.py  telegram_auth.py  telegram_tools.py  telethon_client.py
supabase/migrations/: 20260519224500_agent_base.sql  20260520010238_fix_set_updated_at_search_path.sql  20260524144659_remove_system_prompt.sql  20260526234108_add_agent_timers.sql
tests/api/: auth_helpers.py  test_agents_api.py  test_auth_api.py  test_dashboard_api.py  test_memory_api.py  test_onboarding_api.py
tests/core/: test_agent_manager_restore.py  test_agent_runtime.py  test_crypto.py  test_memory.py  test_onboarding_persistence.py
tests/integrations/: test_database_agent_store.py  test_database_onboarding_repository.py  test_mem0_memory.py  test_telegram_tools.py
(+16 files in other folders)
