[project]
name = "mimic42"
version = "0.1.0"
description = "Async Telegram userbot agent platform built with Telethon, LangChain, and FastAPI."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-openrouter>=0.2.3",
    "mem0ai>=2.0.2",
    "pydantic-settings>=2.14.1",
    "supabase>=2.30.0",
    "telethon>=1.43.2",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
    "ty>=0.0.37",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mimic42"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
ignore = ["ANN401"]
